# Cernio

./: .gitignore  Cargo.toml  README.md  claude.md
companies/: potential.md
context/: architecture.md  location-master.md  notes.md  session-5-full-report.md
context/location-search/: agent-02.md  agent-05.md  agent-08.md  agent-10.md
context/notes/: autofill-status.md  bespoke-search-workflow.md  collaborative-model.md  data-layer.md  db-maintenance.md  discovery-design.md  grading-rubric.md  interview-prep-design.md  job-search-strategy.md  location-rubric.md  populate-db-lessons.md  profile-system.md  scaling-architecture.md  skill-architecture.md  testing-strategy.md  tui-design.md
context/plans/: pipeline-separation.md  tui-v3.md
context/references/: greenhouse-api.md  location-master.md  smartrecruiters-api.md  workable-api.md
context/systems/: ats.md  database.md  pipeline.md  tui.md
exports/: 2026-04-09-companies.md  2026-04-09-jobs.md
profile/: certifications.md  cover-letter.md  education.md  experience.md  interests.md  languages.md  lifestyle-preferences.md  military.md  personal.md  portfolio-gaps.md  preferences.toml  projects.md  resume.md  skills.md  sync-summary.md  visa.md  volunteering.md
profile/projects/: asteroidsai.md  aurix.md  cernio.md  chrona.md  consilium.md  image-browser.md  index.md  neurodrive.md  nyquestro.md  open-source-contributions.md  (+4 more)
src/: config.rs  http.rs  lib.rs  main.rs
tests/: ats_strip_html_parity.rs  cli.rs  pipeline_clean.rs  pipeline_format.rs  pipeline_import.rs  preferences_integrity.rs  smoke.rs
(+117 files in other folders)
