[package]
name = "cernio"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = { version = "0.29", features = ["crossterm"] }
